assets/css/style.css
* {
  padding: 0%;
  margin: 0%;
  box-sizing: border-box;
  font-family: "poppins", Arial, Helvetica, sans-serif;
}
body {

}
.contact{
  background: none;
  border-radius: 10px;
  padding: 10px;
  width: auto;
  background: #ffad32;
  font-weight: 600;
  font-size: 25px;
  
}
.contact:hover{
background-color: #fff;
color: #7b1cd4;
border-color: #f1a839;
cursor: pointer;
}
/* Style the header with a grey background and some padding */
header {
  overflow: hidden;
  /* background-color: #f1f1f1; */
  padding: 20px 70px;
}

/* Style the header links */
header a {
  float: left;
  /* color: #fff; */
  text-align: center;
  padding: 10px;
  text-decoration: none;
  font-size: 30px;
  line-height: 15px;
}
/* Last item in Header  */
header a:nth-child(5) {
  margin-right: 15px;
  color: #f1a839;
  border-radius: 15px;
}
header a:nth-child(5):hover {
  color: #551A8B;
  font-size: 25px;
 
}
header i:last-child:hover{
  font-size: 25px;
 
}
/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
header a.logo {
  font-weight: bold;
  font-size: 30px;
}

/* Change the background color on mouse-over */
header a:hover {
  background-color: none;
  color: #f1a839;
  font-size: 25px;
   font-weight: bold;
}

/* Style the active/current link*/
.active {
  padding-bottom: 10px;
  border-bottom: 3px solid #0f0f0f;
}

/* Float the link section to the right */
.header-right {
  float: right;
}
/* Color on Logo Name */
header span {
  color: #f1a839;
}

.grid-container {
  display: grid;
  grid-template-columns: auto auto auto auto;
  column-gap: 10px;
}

.container {
  margin-top: 50px;
  margin-bottom: 50px;
  margin-left: 100px;
  margin-right: 100px;
}

.row {
  display: flex;
}

.column2 {
  width: 50%;
}

i {
  font-size: 25px;
  cursor: pointer;
  /* transform: translate(-50%, -50%); */
}

.column2{
  float: right;
}
.column2 > h1{
  margin-top: 150px;
  margin-bottom: 10px;
  font-size: 100px;
  text-align: center;
}
.column2 > p{
  font-size: 20px;
  color: gray;
  text-align: justify;
  text-align: left;
}
 .column2 > div > img{
    position: static;
    z-index: 1;

}
.icons{
  text-align: center;
  padding: 50px;
}
.icons > i{
  font-size: 30px;
  margin-right: 20px;
  margin-left: 20px;
}
.icons > i:hover{
  font-size: 25px;
}
.icons i:last-child{
  position: absolute;
  margin-top: 200px;
  margin-left: -250px;
}


/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
@media screen and (max-width: 600px) {
  header a {
    float: none;
    display: block;
    text-align: left;
  }
  header a:nth-child(5){
    margin-left: 0px;
    margin-right: 0px;
    margin-bottom: 10px;
  }
  header i{
   font-size: 30px; 
   margin-left: 5px;
  }  
  .header-right {
    float: none;
  }

}

